# kawin

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
diffScripts/: diffCrV.py  diffNiCrAl.py  initialDiff.py  levelset.py
diff_scripts/: FeCrNidiff.py  VCrtoCrNi.py  diffBin.py  diffTern.py
examples/: 01_Binary_Precipitation.ipynb  02_Multicomponent_Precipitation.ipynb  03_Multiphase_Precipitation.ipynb  04_Precipitation_with_Elastic_Energy.ipynb  05_Strength_Modeling.ipynb  06_Single_Phase_Diffusion.ipynb  07_Extra_Factors.ipynb  07_Homogenization_Model.ipynb  08_Model_Coupling.ipynb  09_Thermodynamics.ipynb  10_Surrogates.ipynb  11_Custom_Iterators.ipynb  11_Extra_Factors.ipynb  12_Custom_Iterators.ipynb  13_Meshes.ipynb  13_Nucleation_Rate.ipynb  14_Meshes.ipynb  AlMgSi.tdb  AlScZr.tdb  AlZr.tdb  Binary Precipitation.ipynb  CuTi.tdb  Extra Factors.ipynb  FeCrNi.tdb  Homogenization Model.ipynb  ModelCoupling.ipynb  Multicomponent Precipitation.ipynb  Multiphase Precipitation.ipynb  NiCrAl.tdb  Precipitation with Elastic Energy.ipynb  Single Phase Diffusion.ipynb  Strength Modeling.ipynb  Surrogates.ipynb  Thermodynamics.ipynb
kawin/: Constants.py  Diffusion.py  EffectiveDiffusion.py  ElasticFactors.py  FreeEnergyHessian.py  GenericModel.py  GrainBoundaries.py  KWNBase.py  KWNEuler.py  LebedevNodes.py  LocalEquilibrium.py  Mesh.py  Mobility.py  PlotUtils.py  PopulationBalance.py  ShapeFactors.py  Strength.py  Surrogate.py  Thermodynamics.py  Transform.py
misc_scripts/: 718aspectratio.py  AlMgSiStrength.py  AlMgSinonisothermal.py  AlScCoupling.py  AlScStrength.py  CuTinonisothermal.py  FeCrNi_homogenization.py  NiCrAldiff.py  NiTinonisothermal.py  diffusionmodelerrors.py  graingrowth.py  sampling.py  solverclass.py  strength_calibration.py  thermodynamicsoutputs.py
paper_scripts/: AlMgSi.ipynb  CuTi_TC.ipynb  CuTi_compare.py  CuTi_compare.txt  CuTi_time.py  NiCrAl and CuTi time comparisons.txt  NiCrAl surrogate compare.txt  NiCrAl.ipynb  NiCrAl.tdb  NiCrAl.txt  NiCrAl2.tdb  NiCrAl_TC.ipynb  NiCrAl_TC.npz  NiCrAl_TC2 output.txt  NiCrAl_TC2.ipynb  NiCrAl_TC2_surrogate  NiCrAl_TC_NoSurr.npz  NiCrAl_cachecompare.py  NiCrAl_compare.py  NiCrAl_plotting.ipynb  NiCrAl_time.py  NiTi.ipynb  NiTi.npz  NiTi_SMA.tdb  NiTi_strain.npz
scripts/: AlMgSi.py  AlSc_strength.py  AlSc_test.npz  Al_dilute.py  (+18 more)
(+198 files in other folders)
