[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]

build-backend = "setuptools.build_meta"

[project]
name = "kawin"
version = "0.3.1"
authors = [
    {name = "Nicholas Ury", email = "nury12n@gmail.com"},
]
description = "Tool for simulating precipitation using the KWN model coupled with Calphad."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.3",
    "numpy>=2.0",
    "pycalphad>=0.11",
    "scipy",
    "setuptools_scm[toml]>=6.0",
]

[project.urls]
Homepage = "https://kawin.org"

[dependency-groups]
dev = [
    "pytest",
]

[tool.setuptools_scm]

[tool.coverage.paths]
# The first path is the path to the modules to report coverage against.
# All following paths are patterns to match against the collected data.
# Any matches will be combined with the first path for coverage.
source = [
    "./kawin",
    "*/lib/*/site-packages/kawin",  # allows testing against site-packages for a local virtual environment
]

[tool.coverage.run]
# Only consider coverage for these packages:
source_pkgs = [
    "kawin"
]
